<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#282828"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:cardBackgroundColor="#0B0B0B"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:cardUseCompatPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivThumbnail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvEvent"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/event"
        android:textColor="#eb3440"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvValueEvent"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingStart="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="@+id/tvEvent"
        app:layout_constraintStart_toEndOf="@+id/tvEvent"
        app:layout_constraintTop_toTopOf="@+id/tvEvent"
        tools:ignore="HardcodedText,RtlSymmetry"
        tools:itemCount="3"
        tools:orientation="horizontal" />

    <TextView
        android:id="@+id/tvLaunches"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/launches"
        android:textColor="#eb3440"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvEvent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvValueLaunches"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingStart="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="@+id/tvLaunches"
        app:layout_constraintStart_toEndOf="@+id/tvLaunches"
        app:layout_constraintTop_toTopOf="@+id/tvLaunches"
        tools:ignore="HardcodedText,RtlSymmetry"
        tools:itemCount="3"
        tools:orientation="horizontal" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/news_title"
        android:textColor="#eb3440"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvLaunches"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvValueTitle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingStart="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toEndOf="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="@+id/tvTitle"
        tools:ignore="HardcodedText,RtlSymmetry"
        tools:itemCount="3"
        tools:orientation="horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>